--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
             data-bs-toggle="modal"
             data-bs-target="#calendarModal"
           >
-            <i class="fa fa-calendar"></i> לוח שנה
+            <i class="fa fa-calendar-days"></i> לוח שנה
             <span
               id="eventCountBadge"
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -881,6 +881,7 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title" id="calendarModalLabel">לוח שנה</h5>
+                  &nbsp;&nbsp;&nbsp;
                   <button
                     type="button"
                     class="btn-close"
