--- a/index.html
+++ b/index.html
@@ -882,7 +882,9 @@
             data-bs-toggle="modal"
             data-bs-target="#calendarModal"
           >
-            <i class="fa fa-calendar"></i> לוח שנה
+            <img src="https://cdn-icons-png.flaticon.com/512/747/747310.png"
+            alt="לוח שנה" style="width: 20px; height: 20px; filter: invert(1);""
+            /> לוח שנה
             <span
               id="eventCountBadge"
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -1484,7 +1486,9 @@
                                             : ""
                                         }
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                        <i class="fa-solid fa-calendar-days"></i>
+                                        <img src="https://cdn-icons-png.flaticon.com/512/747/747310.png"
+            alt="לוח שנה" style="width: 20px; height: 20px"
+            />
                                         <div class="info-content">
                                           <p>תאריך התחלה: <span class="formatted-start-date">${formatDateTime(
                                             task.startDate
