--- a/index.html
+++ b/index.html
@@ -613,6 +613,10 @@
       .dark-mode .import-export .tooltip-modal {
         color: black;
       }
+
+      .dark-mode .task-item .accordion-button img {
+        filter: invert(1); /* הופך את הצבעים של האייקון */
+      }
       .tooltip-modal {
         display: none;
         position: absolute;
