--- a/analytics.html
+++ b/analytics.html
@@ -378,6 +378,11 @@
         <h2 class="animated-text">מחלקת הנדסה</h2>
       </div>
       <h1 class="mb-4">ניתוח נתונים</h1>
+      <div>
+        <button id="downloadExcel" class="btn btn-primary">
+          הורד נתונים לאקסל
+        </button>
+      </div>
       <div class="chart-container">
         <canvas id="tasksChart"></canvas>
         <div class="chart-text">
@@ -412,6 +417,7 @@
         </div>
       </div>
     </div>
+
     <!-- Modal היסטוריה -->
     <div
       class="modal fade"
@@ -523,11 +529,31 @@
         </div>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/react-hot-toast/dist/index.umd.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
 
     <script>
+      document
+        .getElementById("downloadExcel")
+        .addEventListener("click", function () {
+          const tasks = JSON.parse(localStorage.getItem("tasks")) || [];
+          const deletedTasks =
+            JSON.parse(localStorage.getItem("deletedTasks")) || [];
+          const taskDetails = tasks.concat(deletedTasks).map((task) => ({
+            name: task.text,
+            description: task.description,
+            startDate: task.startDate,
+            endDate: task.endDate || "לא צוין",
+            completionDate: task.completionDate || "לא הושלם",
+          }));
+          const ws = XLSX.utils.json_to_sheet(taskDetails);
+          const wb = XLSX.utils.book_new();
+          XLSX.utils.book_append_sheet(wb, ws, "Tasks");
+          XLSX.writeFile(wb, "tasks_data.xlsx");
+        });
+
       function toggleSidebar() {
         const sidebar = document.getElementById("sidebar");
         sidebar.classList.toggle("collapsed");
