--- a/analytics.html
+++ b/analytics.html
@@ -382,6 +382,7 @@
         <button id="downloadExcel" class="btn btn-primary">
           הורד נתונים לאקסל
         </button>
+        <span>הורדת כל הפניות שעדיין פתוחות או הסתיימו עם כל הנתונים</span>
       </div>
       <div class="chart-container">
         <canvas id="tasksChart"></canvas>
