--- a/index.html
+++ b/index.html
@@ -706,6 +706,21 @@
         color: #333; /* צבע כפתור סגירה */
         margin-left: 10px; /* רווח בין הכפתור לתוכן */
       }
+
+      @keyframes modalFadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(-10px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      .modal.show {
+        animation: modalFadeIn 0.3s ease-out;
+      }
     </style>
   </head>
   <body>
